--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "mobile",
-    "slug": "mobile",
+    "name": "area",
+    "slug": "area",
     "privacy": "public",
     "sdkVersion": "36.0.0",
     "platforms": [
